# CMoAT

./: .gitignore  GUI.py  LICENSE  README.md  correlation_analysis.py  data_check.py  download_data.py  main.py  pyproject.toml  requirements.txt  sync_version.py  test.py
.github/workflows/: upload-to-pypi.yml
GUI_tool/: GUI.py  GUI_init.py  correlation_analysis_GUI.py  test.py
app_init/: packages_check.py
cmoa/: __init__.py  __main__.py  main.py
cmoa/GUI_lib/: GUI.py  GUI_init.py
cmoa/argument_parser/: GUI.py  single_analyse.py
cmoa/libs/: correlation_analysis.py  cptac_data.py  dsa_input_data.py  expression_boxplot.py  expression_rank.py  input_data_correlation_analysis.py  input_data_correlation_curve.py  input_data_expression_rank.py  input_data_pancancer_correlation_scratterplot.py  input_data_pancer_expression_boxplot.py  subplot_TCGA_nomissing.py
cmoa/libs/analysis_tasks/: analysis_task_base.py  correlation_analysis_task.py  correlation_curve_task.py  correlation_heatmap_task.py  dual_positive_survival.py  dual_positive_survival_task.py  expression_boxplot_task.py  muti_expression_boxplot_task.py  normal_tissue_api.py  survival_plot.py  (+2 more)
cmoat/: __main__.py  __version__.py
cmoat/GUI_lib/: GUI.py  GUI_init.py
cmoat/argument_parser/: GUI.py  single_analyse.py
cmoat/libs/: cptac_data.py  dsa_input_data.py  expression_boxplot.py  expression_rank.py  input_data_correlation_analysis.py  input_data_pancancer_correlation_scratterplot.py  subplot_TCGA_hasmissing.py  survival.py
command/: command_code.py
data_manager/: data_check.py  download_data.py
(+7 files in other folders)
